2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/Environments/StepTalk.stenv: Add missing
	semicolon at end of plist dictionary.

2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STUndefinedObject.m (-forwardInvocation:):
	Clear result buffer to prevent crashes under GNUstep when the
	invoked method's result type is an object type.

2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/AppKit/GNUmakefile: Add header.m and footer.m to
	dependencies of %.list -> %.m rule.
	* Modules/AppKit/header.m (STGet@@NAME@@): Use local variable to
	get rid of compiler warning.
	* Modules/AppKit/AppKitNotifications.list: Update AppKit
	notification list to match recent change in gui.

	* Modules/AppKit/AppKitConstants.m:
	* Modules/AppKit/AppKitEvents.m:
	* Modules/AppKit/AppKitNotifications.m:
	Regenerated.

2008 Okt 28 Samuel Harvey

   * Modules/GDL2/GNUmakefile: Use ADDITIONAL_NATIVE_LIBS instead of
   GDL2_BUNDLE_LIBS to link GDL2 packages.
	
2007 Feb 14 Nicola Pero

   * All GNUmakefiles in the project: Use GNUSTEP_LIBRARY
   instead of GNUSTEP_INSTALLATION_DIR/Library.

2005 Sep 5 Stefan Urbanek

    * Version 0.10.0

2005 Sep 5 Stefan Urbanek

    * Frameworks/StepTalk: compiler warnings removed

2005 Aug 30 Stefan Urbanek

    * STLanguageManager: new class
    * STLanguage: removed
    * STEngine: engineForLanguageWithName: and engineForFileType: removed, use 
    STLanguageManager instead, added engineForLanguage:
    * Tools/stexec - updated to use STLanguageManager
    * Tools/stupdate_languages - removed as it was replaced by STLanguageManager
    * Examples/Server - removed as it was replaced by stenvironment and distant
    scripting
    
    Notes:
    - you can delete */Library/StepTalk/Configuration directories
    
2005 Aug 17 Stefan Urbanek

    * STConversation: renamed run* method to interpret*, interpretScript: does
    not return value anymore (because of distant conversations), new methods